force-app/main/default/objects/pfc_Annual_Limit__c/pfc_Annual_Limit__c.object-meta.xml
<CustomObject>
    <description>Stores a Person's Annual Limits</description>
    <label>Annual Limit</label>
    <nameField>
        <displayFormat>LIM-{00000000}</displayFormat>
        <label>Annual Limitis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Limits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>