force-app/main/default/objects/pfc_Annual_Limit__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Fiscal year</description>
    <label>Fiscal Year</label>
    <referenceTo>pfc_Fiscal_Year__c</referenceTo>
    <relationshipLabel>Annual Limits</relationshipLabel>
    <relationshipName>Annual_Limits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>