force-app/main/default/objects/pfc_Annual_Limit__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <description>Individual</description>
    <label>Individual</label>
    <referenceTo>pfc_Individual__c</referenceTo>
    <relationshipLabel>Annual Limits</relationshipLabel>
    <relationshipName>Annual_Limits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>