force-app/main/default/objects/pfc_Annual_Limit__c/fields/RRSP_Limit__c.field-meta.xml
<CustomField>
    <fullName>RRSP_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>RRSP Limit for the Person in the FY</description>
    <inlineHelpText>RRSP Limit for the Person in the FY</inlineHelpText>
    <label>RRSP Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>