force-app/main/default/objects/pfc_Annual_Limit__c/fields/RRSP_Limit_Used__c.field-meta.xml
<CustomField>
    <fullName>RRSP_Limit_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>RRSP Limit Used in the Calendar year</description>
    <inlineHelpText>RRSP Limit Used in the Calendar year</inlineHelpText>
    <label>RRSP Limit Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>