force-app/main/default/objects/pfc_Annual_Limit__c/fields/TFSA_Limit__c.field-meta.xml
<CustomField>
    <fullName>TFSA_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>TFSA Limit for the Person for the year</description>
    <inlineHelpText>TFSA Limit for the Person for the year</inlineHelpText>
    <label>TFSA Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>