force-app/main/default/objects/pfc_Annual_Limit__c/fields/TFSA_Limit_Used__c.field-meta.xml
<CustomField>
    <fullName>TFSA_Limit_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>TFSA Limit Used int eh Calendar Year</description>
    <label>TFSA Limit Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>